<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Search">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BF0054"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/inventario_de_activos"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="18dp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.tiper.MaterialSpinner
            android:id="@+id/searchType"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:hint="@string/param_search"
            android:visibility="visible"
            app:boxStrokeColor="@color/colorAccent"
            app:hintEnabled="true" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            app:queryHint="@string/search" />
    </LinearLayout>

    <aglibs.loading.skeleton.layout.SkeletonRecyclerView
        android:id="@+id/results_rv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/llSearch"
        app:skeletonViewHolderItem="@layout/item_list"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_not"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center|center_horizontal"
        android:text="@string/search_not_found"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>